--- a/GExtension/popup.html
+++ b/GExtension/popup.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href ="style.css" />
         <title>Waw</title>
     </head>
     <body>
-        <h2 id="greet">Hallo</h2>
+        <div class="center">
+            <button id = "scrapeList">Scrape This</button>
+            <ul id ="scrapeList"></ul>
+            <script src = "popup.js"></script>    
+        </div>
     </body>
 </html>
