--- a/GExtension/popup.html
+++ b/GExtension/popup.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href ="style.css" />
-        <title>Waw</title>
-    </head>
-    <body>
-        <div class="center">
-            <button id = "scrapeList">Scrape This</button>
-            <ul id ="scrapeList"></ul>
-            <script src = "popup.js"></script>    
-        </div>
-    </body>
+<head>
+    <link rel="stylesheet" href="style.css" />
+    <title>Waw</title>
+</head>
+<body>
+    <div class="center">
+        <button id="scrapeButton">Scrape This</button>
+        <ul id="scrapeList"></ul>
+    </div>
+    <script src="popup.js"></script>
+</body>
 </html>
